<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagemapp3"
    tools:context=".TelaInserir">

    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#E64D42"
        android:onClick="inserirRegistro"
        android:text="@string/btn_salvar"
        app:layout_constraintBottom_toTopOf="@+id/buttonFechar"
        app:layout_constraintStart_toStartOf="@+id/buttonFechar" />

    <Button
        android:id="@+id/buttonConsult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#E64D42"
        android:onClick="abrirTelaConsulta"
        android:text="@string/btn_consultar"
        app:layout_constraintBottom_toTopOf="@+id/buttonFechar"
        app:layout_constraintEnd_toEndOf="@+id/buttonFechar" />

    <Button
        android:id="@+id/buttonFechar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#E64D42"
        android:onClick="fecharTela"
        android:text="@string/btn_voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textCurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:text="@string/curso"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editCurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCurso"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="53dp"
        android:text="@string/aluno"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCurso" />

    <EditText
        android:id="@+id/editAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:foregroundTint="#FFFFFF"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAluno"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textNota1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/nota1"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAluno" />

    <EditText
        android:id="@+id/editNota1"
        android:layout_width="94dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textNota3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textNota1"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textNota2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="43dp"
        android:text="@string/nota2"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/editAluno"
        app:layout_constraintTop_toBottomOf="@+id/editAluno" />

    <EditText
        android:id="@+id/editNota2"
        android:layout_width="104dp"
        android:layout_height="47dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="37dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textNota3"
        app:layout_constraintStart_toStartOf="@+id/textNota2"
        app:layout_constraintTop_toTopOf="@+id/textNota2"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textNota3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="82dp"
        android:text="@string/nota3"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNota1" />

    <EditText
        android:id="@+id/editNota3"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNota3"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>