<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaConsulta"
    android:background="@drawable/imagemapp3">

    <TextView
        android:id="@+id/textCursoConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="92dp"
        android:text="@string/curso"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editCursoConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="170dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCursoConsulta"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textAlunoConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="340dp"
        android:layout_marginBottom="8dp"
        android:text="@string/aluno"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editAlunoConsulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editAlunoConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="9dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textMediaConsulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textMediaConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="339dp"
        android:layout_marginBottom="3dp"
        android:text="@string/media"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editMediaConsulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editMediaConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textSituacaoConsulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textSituacaoConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="323dp"
        android:layout_marginBottom="8dp"
        android:text="@string/situacao"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editSituacaoConsulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editSituacaoConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="62dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonAnterior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonAnterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="47dp"
        android:backgroundTint="#E64D42"
        android:onClick="registroAnterior"
        android:text="@string/btn_ant"
        app:layout_constraintBottom_toTopOf="@+id/buttonVoltarConsulta"
        app:layout_constraintEnd_toStartOf="@+id/buttonProximo"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonProximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="47dp"
        android:backgroundTint="#E64D42"
        android:onClick="proximoRegistro"
        android:text="@string/btn_prox"
        app:layout_constraintBottom_toTopOf="@+id/buttonVoltarConsulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonAnterior" />

    <Button
        android:id="@+id/buttonVoltarConsulta"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#E64D42"
        android:onClick="fecharTela"
        android:text="@string/btn_voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="169dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="ID"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>